--- a/newTNM/newTNM/App.xaml
+++ b/newTNM/newTNM/App.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:newTNM"
              xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml" xmlns:mui="http://schemas.modernwpf.com/2019"
-             StartupUri="/Auth/Authorization.xaml">
+             StartupUri="/Menu/MainMenu.xaml">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
