Fixed project name and dependencies

--- a/DesktopApp/TNM/App.xaml
+++ b/DesktopApp/TNM/App.xaml
@@ -1,9 +1,9 @@
-﻿<Application x:Class="newTNM.App"
+﻿<Application x:Class="TNM.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:newTNM"
+             xmlns:local="clr-namespace:TNM"
              xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml" xmlns:mui="http://schemas.modernwpf.com/2019"
-             StartupUri="/Menu/MainMenu.xaml">
+             StartupUri="/Auth/Authorization.xaml">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
