--- a/DesktopApp/TNM/Auth/Authorization.xaml
+++ b/DesktopApp/TNM/Auth/Authorization.xaml
@@ -1,17 +1,17 @@
-﻿<ui:FluentWindow  xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
-      x:Class="newTNM.Auth.Registration"
-      xmlns:local="clr-namespace:newTNM.Auth"
-      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-      mc:Ignorable="d"
-      Height="400"
-      Width="400"
-      Background="Black"
-      WindowStartupLocation="CenterScreen"
-      WindowStyle="None"
-      MinHeight="410">
+﻿<ui:FluentWindow x:Class="TNM.Auth.Authorization"
+        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
+        xmlns:local="clr-namespace:TNM.Auth"
+        mc:Ignorable="d"
+        Height="400"
+        Width="400"
+        Background="Black"
+        WindowStartupLocation="CenterScreen"
+        WindowStyle="None"
+        MinHeight="410">
     <Grid Name="MainGrid">
         <!-- Панель заголовка с кнопками управления окнами (не масштабируется) -->
         <DockPanel Grid.Row="0" Background="#333333" Height="40" MouseDown="TitleBar_MouseDown" VerticalAlignment="Top">
@@ -36,7 +36,6 @@
                     <RowDefinition Name="BodyRow1" Height="0.05*" />
                     <RowDefinition Name="BodyRow2" Height="0.05*" />
                     <RowDefinition Name="BodyRow3" Height="0.05*" />
-                    <RowDefinition Name="BodyRow4" Height="0.05*" />
                     <RowDefinition Name="FooterRow" Height="0.12*" />
                 </Grid.RowDefinitions>
 
@@ -56,27 +55,24 @@
                 </StackPanel>
 
                 <!-- Текстовая подсказка -->
-                <ui:TextBlock x:Name="assistBox" Grid.Row="2" HorizontalAlignment="Center" VerticalAlignment="Center" Text="Зарегистрируйтесь, чтобы продолжить" FontSize="12" Foreground="#a59b99" Margin="0,0,0,5" />
+                <ui:TextBlock x:Name="assistBlock" Grid.Row="2" HorizontalAlignment="Center" VerticalAlignment="Center" Text="Войдите, чтобы продолжить" FontSize="12" Foreground="#a59b99" Margin="0,0,0,5" />
 
                 <!-- Поле для логина -->
-                <ui:TextBox x:Name="loginBox" Grid.Row="3" HorizontalAlignment="Center" Width="200" VerticalAlignment="Center" FontSize="12" PlaceholderEnabled="True" PlaceholderText="Введите логин               " Margin="0,5,0,5" />
-
-                <!-- Поле для почты -->
-                <ui:TextBox x:Name="mailBox" Grid.Row="4" HorizontalAlignment="Center" Width="200" VerticalAlignment="Center" FontSize="12" PlaceholderEnabled="True" PlaceholderText="Введите почту               " />
+                <ui:TextBox x:Name="loginBox" Grid.Row="3" HorizontalAlignment="Center" Width="200" VerticalAlignment="Center" FontSize="12" PlaceholderEnabled="True" PlaceholderText="Введите логин               " Margin="0,5,0,0" />
 
                 <!-- Поле для пароля -->
-                <ui:PasswordBox x:Name="passwordBox" Grid.Row="5" HorizontalAlignment="Center" Width="200" VerticalAlignment="Center" FontSize="12" PlaceholderEnabled="True" PlaceholderText="Введите пароль" Margin="0,5,0,5" />
+                <ui:PasswordBox x:Name="passwordBox" Grid.Row="4" HorizontalAlignment="Center" Width="200" VerticalAlignment="Center" FontSize="12" PlaceholderEnabled="True" PlaceholderText="Введите пароль" Margin="0,5,0,5" />
 
-                <!-- Кнопки регистрации и возврата на страницу авторизации -->
-                <ui:Button x:Name="RegistrationButton" Grid.Row="6" HorizontalAlignment="Center" Width="250" Height="40" VerticalAlignment="Top" Margin="0,0,0,0" Click="RegistrationButton_Click">
+                <!-- Кнопки входа и регистрации -->
+                <ui:Button x:Name="LoginButton" Grid.Row="5" HorizontalAlignment="Center" Width="250" Height="40" VerticalAlignment="Top" Margin="0,5,0,0" Click="LoginButton_Click">
                     <Viewbox>
-                        <ui:TextBlock Text="Зарегистрироваться" />
+                        <ui:TextBlock Text="Войти" />
                     </Viewbox>
                 </ui:Button>
 
-                <ui:Button x:Name="BackButton" Grid.Row="6" HorizontalAlignment="Center" Width="250" Height="40" VerticalAlignment="Top" Margin="0,45,0,5" Click="BackButton_Click">
+                <ui:Button x:Name="RegistrationButton" Grid.Row="6" HorizontalAlignment="Center" Width="250" Height="40" VerticalAlignment="Top" Margin="0,50,0,5" Click="RegistrationButton_Click">
                     <Viewbox>
-                        <ui:TextBlock Text="Назад" />
+                        <ui:TextBlock Text="Регистрация" />
                     </Viewbox>
                 </ui:Button>
             </Grid>
