--- a/DesktopApp/TNM/Pages/TaskView.xaml
+++ b/DesktopApp/TNM/Pages/TaskView.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="newTNM.Pages.TaskView"
+﻿<Page x:Class="TNM.Pages.TaskView"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
