--- a/DesktopApp/TNM/App.xaml
+++ b/DesktopApp/TNM/App.xaml
@@ -1,8 +1,8 @@
 ﻿<Application x:Class="TNM.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:TNM"
-             xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml" xmlns:mui="http://schemas.modernwpf.com/2019"
+             xmlns:mui="http://schemas.modernwpf.com/2019"
              StartupUri="/Auth/Authorization.xaml">
     <Application.Resources>
         <ResourceDictionary>
