Updated colors and styles
Now all styles can be combined

--- a/DesktopApp/TNM/App.xaml
+++ b/DesktopApp/TNM/App.xaml
@@ -9,7 +9,7 @@
             <ResourceDictionary.MergedDictionaries>
                 <ui:ThemesDictionary />
                 <ui:ControlsDictionary />
-                <ResourceDictionary Source="Styles/ButtonStyle.xaml" />
+                <ResourceDictionary Source="Styles/TNM.xaml" />
                 <mui:ThemeResources />
                 <mui:XamlControlsResources />
             </ResourceDictionary.MergedDictionaries>
