Working Theme Changing function
Extra ui changes

--- a/DesktopApp/TNM/Auth/Authorization.xaml
+++ b/DesktopApp/TNM/Auth/Authorization.xaml
@@ -14,17 +14,17 @@
         MinHeight="410">
     <Grid Name="MainGrid">
         <!-- Панель заголовка с кнопками управления окнами (не масштабируется) -->
-        <local:WindowControlBar />
+        <ui:TitleBar />
         <Viewbox Grid.Row="1" Stretch="Uniform">
             <!-- Содержимое окна, которое масштабируется по мере изменения размеров окна -->
             <Grid Grid.Row="1">
                 <Grid.RowDefinitions>
-                    <RowDefinition Name="HeaderRow" Height="22" />
-                    <RowDefinition Name="BodyRow" Height="0.05*" />
-                    <RowDefinition Name="BodyRow1" Height="0.05*" />
-                    <RowDefinition Name="BodyRow2" Height="0.05*" />
-                    <RowDefinition Name="BodyRow3" Height="0.05*" />
-                    <RowDefinition Name="FooterRow" Height="0.12*" />
+                    <RowDefinition Name="HeaderRow" Height="10" />
+                    <RowDefinition Name="BodyRow" Height="Auto" />
+                    <RowDefinition Name="BodyRow1" Height="Auto" />
+                    <RowDefinition Name="BodyRow2" Height="Auto" />
+                    <RowDefinition Name="BodyRow3" Height="Auto" />
+                    <RowDefinition Name="FooterRow" Height="Auto" />
                 </Grid.RowDefinitions>
 
                 <!-- Логотип и заголовок -->
@@ -46,10 +46,10 @@
                 <ui:TextBlock x:Name="assistBlock" Grid.Row="2" HorizontalAlignment="Center" VerticalAlignment="Center" Text="Войдите, чтобы продолжить" FontSize="12" Foreground="#a59b99" Margin="0,0,0,5" />
 
                 <!-- Поле для логина -->
-                <ui:TextBox x:Name="loginBox" Grid.Row="3" HorizontalAlignment="Center" Width="200" VerticalAlignment="Center" FontSize="12" PlaceholderEnabled="True" PlaceholderText="Введите логин               " Margin="0,5,0,0" />
+                <ui:TextBox x:Name="loginBox" Grid.Row="3" HorizontalAlignment="Center" Width="200" VerticalAlignment="Center" FontSize="14" PlaceholderEnabled="True" PlaceholderText="Введите логин          " Margin="0,5,0,0" />
 
                 <!-- Поле для пароля -->
-                <ui:PasswordBox x:Name="passwordBox" Grid.Row="4" HorizontalAlignment="Center" Width="200" VerticalAlignment="Center" FontSize="12" PlaceholderEnabled="True" PlaceholderText="Введите пароль" Margin="0,5,0,5" />
+                <ui:PasswordBox x:Name="passwordBox" Grid.Row="4" HorizontalAlignment="Center" Width="200" VerticalAlignment="Center" PlaceholderEnabled="True" PlaceholderText="Введите пароль" Margin="0,5,0,5" />
 
                 <!-- Кнопки входа и регистрации -->
                 <ui:Button x:Name="LoginButton" Grid.Row="5" HorizontalAlignment="Center" Width="250" Height="40" VerticalAlignment="Top" Margin="0,5,0,0" Click="LoginButton_Click">
