--- a/DesktopApp/TNM/Pages/CreateProject.xaml
+++ b/DesktopApp/TNM/Pages/CreateProject.xaml
@@ -10,12 +10,11 @@
       Title="CreateProject">
     <Grid>
         <!-- Верхний заголовок -->
-        <TextBlock
+        <ui:TextBlock
             x:Name="Title"
             Text="Создать новый проект"
             FontSize="28"
             FontWeight="Bold"
-            Foreground="White"
             Margin="20,20,0,0"
             HorizontalAlignment="Left" />
 
@@ -33,37 +32,32 @@
             </Grid.ColumnDefinitions>
 
             <!-- Поле для названия проекта -->
-            <TextBlock
+            <ui:TextBlock
                 x:Name="ProjectNameTextBlock"
                 Text="Название проекта:"
                 FontSize="16"
-                Foreground="White"
                 VerticalAlignment="Center"
                 Grid.Row="0"
                 Grid.Column="0"
                 Margin="0,0,10,10" />
-            <TextBox
+            <ui:TextBox
                 x:Name="ProjectNameTextBox"
                 FontSize="14"
                 Grid.Row="0"
                 Grid.Column="1"
                 VerticalAlignment="Center"
-                Margin="0,0,0,10"
-                Background="#333333"
-                Foreground="White"
-                BorderBrush="#555555" />
+                Margin="0,0,0,10" />
 
             <!-- Поле для описания проекта -->
-            <TextBlock
+            <ui:TextBlock
                 x:Name="ProjectDescriptionTextBlock"
                 Text="Описание проекта:"
                 FontSize="16"
-                Foreground="White"
                 VerticalAlignment="Top"
                 Grid.Row="1"
                 Grid.Column="0"
                 Margin="0,10,10,0" />
-            <TextBox
+            <ui:TextBox
                 x:Name="ProjectDescriptionTextBox"
                 FontSize="14"
                 Grid.Row="1"
@@ -72,13 +66,10 @@
                 AcceptsReturn="True"
                 VerticalScrollBarVisibility="Auto"
                 TextWrapping="Wrap"
-                Height="100"
-                Background="#333333"
-                Foreground="White"
-                BorderBrush="#555555" />
+                Height="100" />
 
             <!-- Кнопка "Создать проект" -->
-            <Button
+            <ui:Button
                 x:Name="CreateProjectButton"
                 Content="Создать проект"
                 Grid.Row="3"
