--- a/DesktopApp/TNM/Pages/ProjectPage.xaml
+++ b/DesktopApp/TNM/Pages/ProjectPage.xaml
@@ -1,12 +1,12 @@
 ﻿<Page x:Class="TNM.Pages.ProjectPage"
-      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-      xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-      mc:Ignorable="d"
-      d:DesignHeight="450" d:DesignWidth="800"
-      Title="ProjectPage">
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    mc:Ignorable="d"
+    d:DesignHeight="450" d:DesignWidth="800"
+    Title="ProjectPage">
 
     <ScrollViewer VerticalScrollBarVisibility="Auto"
     HorizontalScrollBarVisibility="Disabled">
@@ -33,7 +33,7 @@
                                     <ColumnDefinition Width="Auto" />
                                     <ColumnDefinition Width="*" />
                                 </Grid.ColumnDefinitions>
-                                <Image
+                                <ui:Image
                                 x:Name="TaskIcon"
                                 Width="60"
                                 Margin="24,0,0,0"
@@ -47,12 +47,10 @@
                                     x:Name="TaskTitle"
                                     FontTypography="BodyStrong"
                                     Text="{Binding title}"
-                                    Foreground="White"
                                     TextWrapping="WrapWithOverflow" />
                                     <ui:TextBlock
                                     x:Name="TaskDescription"
                                     Appearance="Secondary"
-                                    Foreground="White"
                                     Text="{Binding description}"
                                     TextWrapping="WrapWithOverflow" />
                                 </StackPanel>
@@ -63,7 +61,7 @@
             </ItemsControl>
 
             <!-- Кнопка создания новой задачи -->
-            <Button Content="Создать новую задачу"
+            <ui:Button Content="Создать новую задачу"
             Margin="8"
             Height="50"
             FontSize="16"
