--- a/DesktopApp/TNM/App.xaml
+++ b/DesktopApp/TNM/App.xaml
@@ -7,7 +7,7 @@
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ui:ThemesDictionary />
+                <ui:ThemesDictionary Theme="Dark" />
                 <ui:ControlsDictionary />
                 <ResourceDictionary Source="Styles/TNM.xaml" />
                 <mui:ThemeResources />
