--- a/DesktopApp/TNM/Pages/ProjectView.xaml
+++ b/DesktopApp/TNM/Pages/ProjectView.xaml
@@ -9,8 +9,9 @@
       d:DesignHeight="450" d:DesignWidth="800"
       Title="ProjectView">
 
-    <ScrollViewer VerticalScrollBarVisibility="Auto"
-    HorizontalScrollBarVisibility="Disabled">
+    <ui:DynamicScrollViewer VerticalScrollBarVisibility="Auto" CanContentScroll="True"
+
+        HorizontalScrollBarVisibility="Disabled">
         <StackPanel Orientation="Vertical" Margin="10">
             <!-- Список проектов -->
             <ItemsControl Name="ProjectList" ItemsSource="{Binding Projects}">
@@ -71,5 +72,5 @@
             VerticalAlignment="Bottom"
             Click="CreateNewProject_Click" />
         </StackPanel>
-    </ScrollViewer>
+    </ui:DynamicScrollViewer>
 </Page>
