--- a/DesktopApp/TNM/Menu/MainMenu.xaml
+++ b/DesktopApp/TNM/Menu/MainMenu.xaml
@@ -1,20 +1,19 @@
 ﻿<ui:FluentWindow x:Class="TNM.Menu.MainMenu"
-      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-      xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-      xmlns:local="clr-namespace:TNM.Styles"
-      xmlns:pages="clr-namespace:TNM.Pages"
-      mc:Ignorable="d"
-      Height="650"
-      Width="1000"
-      MinHeight="500"
-      MinWidth="900"
-      WindowStartupLocation="CenterScreen"
-      WindowStyle="None"
-      Title="MainMenu">
-    <Grid Cursor="">
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:pages="clr-namespace:TNM.Pages"
+    mc:Ignorable="d"
+    Height="650"
+    Width="1000"
+    MinHeight="500"
+    MinWidth="900"
+    WindowStartupLocation="CenterScreen"
+    WindowStyle="None"
+    Title="MainMenu">
+    <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Name="HeaderRow" Height="30" />
             <RowDefinition Name="BodyRow" Height="1.5*" />
