--- a/DesktopApp/TNM/Pages/CreateProject.xaml
+++ b/DesktopApp/TNM/Pages/CreateProject.xaml
@@ -1,13 +1,13 @@
 ﻿<Page x:Class="TNM.Pages.CreateProject"
-      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-      xmlns:local="clr-namespace:TNM.Pages"
-      xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
-      mc:Ignorable="d"
-      d:DesignHeight="450" d:DesignWidth="800"
-      Title="CreateProject">
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:TNM.Pages"
+    xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
+    mc:Ignorable="d"
+    d:DesignHeight="450" d:DesignWidth="800"
+    Title="CreateProject">
     <Grid>
         <!-- Верхний заголовок -->
         <ui:TextBlock
@@ -16,7 +16,8 @@
             FontSize="28"
             FontWeight="Bold"
             Margin="20,20,0,0"
-            HorizontalAlignment="Left" />
+            HorizontalAlignment="Left"
+            Foreground="{DynamicResource TextPrimaryBrush}" />
 
         <!-- Основная форма -->
         <Grid Margin="20,80,20,20">
@@ -39,14 +40,16 @@
                 VerticalAlignment="Center"
                 Grid.Row="0"
                 Grid.Column="0"
-                Margin="0,0,10,10" />
+                Margin="0,0,10,10"
+                Foreground="{DynamicResource TextPrimaryBrush}" />
             <ui:TextBox
                 x:Name="ProjectNameTextBox"
                 FontSize="14"
                 Grid.Row="0"
                 Grid.Column="1"
                 VerticalAlignment="Center"
-                Margin="0,0,0,10" />
+                Margin="0,0,0,10"
+                Foreground="{DynamicResource TextPrimaryBrush}" />
 
             <!-- Поле для описания проекта -->
             <ui:TextBlock
@@ -56,7 +59,8 @@
                 VerticalAlignment="Top"
                 Grid.Row="1"
                 Grid.Column="0"
-                Margin="0,10,10,0" />
+                Margin="0,10,10,0"
+                Foreground="{DynamicResource TextPrimaryBrush}" />
             <ui:TextBox
                 x:Name="ProjectDescriptionTextBox"
                 FontSize="14"
