--- a/DesktopApp/TNM/Pages/TaskEdit.xaml
+++ b/DesktopApp/TNM/Pages/TaskEdit.xaml
@@ -1,11 +1,12 @@
 ﻿<Page x:Class="TNM.Pages.TaskEdit"
-      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-      mc:Ignorable="d"
-      d:DesignHeight="450" d:DesignWidth="800"
-      Title="TaskView">
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
+    mc:Ignorable="d"
+    d:DesignHeight="450" d:DesignWidth="800"
+    Title="TaskView">
     <Grid Margin="20">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
@@ -22,11 +23,12 @@
 
         <!-- Название задачи и статус -->
         <StackPanel Orientation="Horizontal" Grid.Row="0" Margin="0,0,0,20">
-            <TextBlock
+            <ui:TextBlock
             Text="Название задачи"
             FontSize="22"
             FontWeight="Bold"
-            VerticalAlignment="Center" />
+            VerticalAlignment="Center"
+            Foreground="{DynamicResource TextPrimaryBrush}" />
 
             <ComboBox
             x:Name="StatusComboBox"
@@ -41,32 +43,35 @@
         </StackPanel>
 
         <!-- Описание задачи -->
-        <TextBlock
+        <ui:TextBlock
         x:Name="TaskDescriptionTextBlock"
         Grid.Row="1"
         Text="Описание задачи: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent euismod sapien a magna gravida, ac aliquet lectus venenatis."
         FontSize="16"
         TextWrapping="Wrap"
-        Margin="0,0,0,20" />
+        Margin="0,0,0,20"
+        Foreground="{DynamicResource TextPrimaryBrush}" />
 
         <!-- Категории (теги) -->
         <StackPanel Grid.Row="2" Orientation="Vertical" Margin="0,0,0,20">
-            <TextBlock
+            <ui:TextBlock
             Text="Теги:"
             FontSize="18"
             FontWeight="Bold"
-            Margin="0,0,0,10" />
+            Margin="0,0,0,10"
+            Foreground="{DynamicResource TextPrimaryBrush}" />
             <WrapPanel x:Name="TagsWrapPanel" />
             <Button Content="+" Width="35" Height="35" Click="AddTag_Click" Margin="0,5,0,0" />
         </StackPanel>
 
         <!-- Отвечающие за задачу -->
         <StackPanel Grid.Row="3" Orientation="Vertical">
-            <TextBlock
+            <ui:TextBlock
             Text="Отвечает за задачу:"
             FontSize="18"
             FontWeight="Bold"
-            Margin="0,0,0,10" />
+            Margin="0,0,0,10"
+            Foreground="{DynamicResource TextPrimaryBrush}" />
             <WrapPanel x:Name="AssignedWrapPanel" />
             <Button Content="+" Width="35" Height="35" Click="AddAssigned_Click" Margin="0,5,0,0" />
         </StackPanel>
