--- a/DesktopApp/TNM/Styles/ThemeColors.xaml
+++ b/DesktopApp/TNM/Styles/ThemeColors.xaml
@@ -1,6 +1,4 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    <ResourceDictionary.MergedDictionaries>
-        <ResourceDictionary Source="ThemeColors.xaml" />
-    </ResourceDictionary.MergedDictionaries>
+    <SolidColorBrush x:Key="TextPrimaryBrush" Color="Black" />
 </ResourceDictionary>
